--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
 <body>
   <div class="container">
-    <header class="main-header">
-      <h1 class="main-title">The pointing gentlemen</h1>
-    </header>
+
     <section class="controls">
       <p class="info">0 gentlemen pointing at you</p>
       <button class="button button--select">Select all</button>
@@ -27,21 +25,21 @@
       <ul class="gentlemen">
         <li class="gentleman">
           <div class="gentleman__avatar-container">
-            <img class="gentleman__avatar" src="img/fary.jpg" alt="The Fary pointing at you" />
-            <span class="gentleman__initial">F</span>
+            <img class="gentleman__avatar" src="img/dragon.jpg" alt="Dragon pointing at you" />
+            <span class="gentleman__initial">D</span>
           </div>
           <div class="gentleman__data-container">
-            <h2 class="gentleman__name">The Fary</h2>
+            <h2 class="gentleman__name">Sánchez Dragon</h2>
             <ul class="gentleman__data-list">
               <li class="gentleman__data">
                 <span class="gentleman__data-label">Profession:</span>
-                Influencer
+                Pedophile
               </li>
               <li class="gentleman__data">
                 <span class="gentleman__data-label">Status:</span> RIP
               </li>
               <li class="gentleman__data">
-                <span class="gentleman__data-label">Twitter:</span> Pending
+                <span class="gentleman__data-label">Twitter:</span> @lolitas_enjoyer
               </li>
             </ul>
           </div>
